[package]
name = "hello-esp-rust"
version = "0.1.0"
authors = ["Paul356 <panhao356@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "hello-esp-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[patch.crates-io]
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
embedded-svc = "0.28.0"
serde = "1.0.210"
anyhow = "1.0.89"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "net", "io-util", "tokio-macros", "macros", "fs"] }
mio = { version = "1.0.2", features = ["log"] }
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
http-body-util = "0.1.2"

[build-dependencies]
embuild = "0.32.0"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "fromenv"
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.ble"]
